Removed unwanted fontawesome and fixed gap of footer

--- a/css/contact.css
+++ b/css/contact.css
@@ -78,11 +78,6 @@ ul.no-bullets {
   align-items: center;
 }
 
-.iconAlign {
-  margin-right: 10px;
-  /* color: #ccc;  */
-}
-
 .smallCSS {
   margin: 0px;
 }
