--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,6 @@
     align-items: center;
     background-color: #f4cccc; /* This is a light pink color, similar to the background in your image */
     height: 75px;
-    margin-top: 20px;
   }
   .site-footer p {
     font-size: 20px;
